--- a/CuiJian/Base.lproj/Main.storyboard
+++ b/CuiJian/Base.lproj/Main.storyboard
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="HCF-Xw-WXa">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="8EM-FC-HkE">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--Game View Controller-->
@@ -20,13 +21,25 @@
                             <sceneKitView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="b7U-Bx-Fsd">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                             </sceneKitView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pdT-Yj-hoF">
+                                <rect key="frame" x="547" y="28" width="33" height="22"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="33" id="wTp-m8-eAu"/>
+                                </constraints>
+                                <state key="normal" image="hamburger"/>
+                                <connections>
+                                    <segue destination="vQp-Ch-gUU" kind="push" id="6Lu-p6-cE5"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="b7U-Bx-Fsd" firstAttribute="leading" secondItem="bbd-pQ-Xlw" secondAttribute="leading" id="4e1-Sb-Rds"/>
-                            <constraint firstItem="b7U-Bx-Fsd" firstAttribute="bottom" secondItem="LyI-pn-o4s" secondAttribute="top" id="IhG-2F-v0H"/>
-                            <constraint firstAttribute="trailing" secondItem="b7U-Bx-Fsd" secondAttribute="trailing" id="hvd-CV-P7z"/>
-                            <constraint firstItem="b7U-Bx-Fsd" firstAttribute="top" secondItem="bbd-pQ-Xlw" secondAttribute="top" id="wtX-f6-4RB"/>
+                            <constraint firstItem="pdT-Yj-hoF" firstAttribute="trailing" secondItem="bbd-pQ-Xlw" secondAttribute="trailingMargin" id="By8-QT-uv8"/>
+                            <constraint firstItem="b7U-Bx-Fsd" firstAttribute="leading" secondItem="bbd-pQ-Xlw" secondAttribute="leading" id="Of6-23-8UV"/>
+                            <constraint firstItem="b7U-Bx-Fsd" firstAttribute="top" secondItem="bbd-pQ-Xlw" secondAttribute="top" id="Pb1-w7-9X3"/>
+                            <constraint firstAttribute="trailing" secondItem="b7U-Bx-Fsd" secondAttribute="trailing" id="V6E-2R-14m"/>
+                            <constraint firstItem="b7U-Bx-Fsd" firstAttribute="bottom" secondItem="LyI-pn-o4s" secondAttribute="top" id="aVN-ca-ezL"/>
+                            <constraint firstItem="pdT-Yj-hoF" firstAttribute="top" secondItem="gmh-zm-H5T" secondAttribute="bottom" constant="8" symbolic="YES" id="kod-0l-bk1"/>
                             <constraint firstItem="b7U-Bx-Fsd" firstAttribute="bottom" secondItem="LyI-pn-o4s" secondAttribute="top" id="xC8-ig-bN8"/>
                         </constraints>
                         <variation key="default">
@@ -35,6 +48,8 @@
                             </mask>
                         </variation>
                     </view>
+                    <navigationItem key="navigationItem" id="cX7-ak-Ykh"/>
+                    <nil key="simulatedTopBarMetrics"/>
                     <connections>
                         <outlet property="rootView" destination="bbd-pQ-Xlw" id="LB8-ck-UlW"/>
                         <outlet property="sceneView" destination="b7U-Bx-Fsd" id="6Q7-ug-42X"/>
@@ -42,7 +57,79 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kLk-Qo-e2T" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="528" y="447"/>
+            <point key="canvasLocation" x="2153" y="436"/>
+        </scene>
+        <!--专辑试听-->
+        <scene sceneID="R3b-nb-gSF">
+            <objects>
+                <viewController id="vQp-Ch-gUU" customClass="SongViewController" customModule="CuiJian" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="yPe-2i-gEZ"/>
+                        <viewControllerLayoutGuide type="bottom" id="LZG-5n-bgm"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="CuU-OP-32D">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="songBgImage" translatesAutoresizingMaskIntoConstraints="NO" id="IWJ-7e-dKr">
+                                <rect key="frame" x="-20" y="-20" width="640" height="620"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="songBgParaImage" translatesAutoresizingMaskIntoConstraints="NO" id="NRl-Ob-NRd">
+                                <rect key="frame" x="-20" y="-20" width="640" height="600"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="IWJ-7e-dKr" firstAttribute="bottom" secondItem="LZG-5n-bgm" secondAttribute="top" id="7Ow-fA-ksI"/>
+                            <constraint firstItem="NRl-Ob-NRd" firstAttribute="bottom" secondItem="LZG-5n-bgm" secondAttribute="top" constant="-20" id="GUs-bR-Uam"/>
+                            <constraint firstItem="NRl-Ob-NRd" firstAttribute="top" secondItem="CuU-OP-32D" secondAttribute="top" constant="-20" id="IaN-K9-0cU"/>
+                            <constraint firstItem="NRl-Ob-NRd" firstAttribute="leading" secondItem="CuU-OP-32D" secondAttribute="leading" constant="-20" id="MtN-if-XrE"/>
+                            <constraint firstAttribute="trailing" secondItem="NRl-Ob-NRd" secondAttribute="trailing" constant="-20" id="R5f-YG-Hp2"/>
+                            <constraint firstItem="IWJ-7e-dKr" firstAttribute="top" secondItem="NRl-Ob-NRd" secondAttribute="top" id="YtH-7I-3Lf"/>
+                            <constraint firstItem="IWJ-7e-dKr" firstAttribute="leading" secondItem="NRl-Ob-NRd" secondAttribute="leading" id="qIr-Ar-jxx"/>
+                            <constraint firstItem="IWJ-7e-dKr" firstAttribute="trailing" secondItem="NRl-Ob-NRd" secondAttribute="trailing" id="sWY-yk-NNe"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="专辑试听" id="ePW-1T-o3C">
+                        <barButtonItem key="leftBarButtonItem" image="backArrow" style="done" id="8P2-4g-o78">
+                            <connections>
+                                <action selector="backBtn:" destination="vQp-Ch-gUU" id="Xsf-9E-O16"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" image="hamburger" id="8cb-Yi-teJ"/>
+                    </navigationItem>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                    <connections>
+                        <outlet property="bgImageView" destination="NRl-Ob-NRd" id="olk-VO-Xq7"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="f7d-0E-8TA" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2860" y="436"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="ZuO-qP-42I">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="8EM-FC-HkE" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="cB0-id-9M3">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="HCF-Xw-WXa" kind="relationship" relationship="rootViewController" id="c7l-4m-UZH"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="odh-SM-fV9" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1341" y="436"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="backArrow" width="13" height="21"/>
+        <image name="hamburger" width="23" height="16"/>
+        <image name="songBgImage" width="750" height="1334"/>
+        <image name="songBgParaImage" width="958" height="1618"/>
+    </resources>
 </document>
