--- a/CuiJian/Base.lproj/Main.storyboard
+++ b/CuiJian/Base.lproj/Main.storyboard
@@ -28,9 +28,7 @@
                                 </constraints>
                                 <state key="normal" image="hamburger"/>
                                 <connections>
-                                    <segue destination="GFv-yb-n9U" kind="popoverPresentation" identifier="open nav" popoverAnchorView="pdT-Yj-hoF" id="x8e-3F-m38">
-                                        <popoverArrowDirection key="popoverArrowDirection" up="YES" down="YES" left="YES" right="YES"/>
-                                    </segue>
+                                    <segue destination="Ohr-QL-pgw" kind="presentation" identifier="open nav" modalPresentationStyle="overFullScreen" modalTransitionStyle="crossDissolve" id="nlg-0q-LyY"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -59,26 +57,107 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kLk-Qo-e2T" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2259" y="275"/>
+            <point key="canvasLocation" x="2091" y="-89"/>
         </scene>
         <!--Nav View Controller-->
         <scene sceneID="7k6-Qm-INm">
             <objects>
-                <viewController modalTransitionStyle="crossDissolve" modalPresentationStyle="formSheet" id="GFv-yb-n9U" customClass="NavViewController" customModule="CuiJian" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController modalPresentationStyle="formSheet" id="GFv-yb-n9U" customClass="NavViewController" customModule="CuiJian" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="MYK-RH-Ljr"/>
-                        <viewControllerLayoutGuide type="bottom" id="Hzz-G3-ecy"/>
+                        <viewControllerLayoutGuide type="top" id="x36-t8-eC5"/>
+                        <viewControllerLayoutGuide type="bottom" id="tkS-Zb-ce8"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="PF3-MA-c5w">
+                    <view key="view" contentMode="scaleToFill" id="3WC-md-Y2t">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="g2k-J1-ZnN">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="v14-Yi-KjU">
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                    <subviews>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="O4g-GB-x8j">
+                                            <rect key="frame" x="271" y="229" width="58" height="30"/>
+                                            <state key="normal" title="Timeline"/>
+                                            <connections>
+                                                <segue destination="cuh-sm-gdg" kind="push" id="qWr-6P-Maa"/>
+                                            </connections>
+                                        </button>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iob-cU-15p">
+                                            <rect key="frame" x="285" y="305" width="30" height="30"/>
+                                            <state key="normal" title="MV"/>
+                                            <connections>
+                                                <segue destination="MrU-AQ-Rod" kind="push" id="OyN-cg-LNa"/>
+                                            </connections>
+                                        </button>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4gV-Oo-ieJ">
+                                            <rect key="frame" x="285" y="347" width="34" height="30"/>
+                                            <state key="normal" title="back"/>
+                                            <connections>
+                                                <action selector="dismissVC:" destination="GFv-yb-n9U" eventType="touchUpInside" id="Bk5-Of-3mz"/>
+                                            </connections>
+                                        </button>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5ZM-kK-f7C">
+                                            <rect key="frame" x="284" y="170" width="36" height="30"/>
+                                            <state key="normal" title="Song"/>
+                                            <connections>
+                                                <segue destination="vQp-Ch-gUU" kind="push" id="8SK-Qx-k3t"/>
+                                            </connections>
+                                        </button>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="4gV-Oo-ieJ" firstAttribute="top" secondItem="iob-cU-15p" secondAttribute="bottom" constant="12" id="4pZ-JN-drC"/>
+                                        <constraint firstItem="5ZM-kK-f7C" firstAttribute="centerX" secondItem="4gV-Oo-ieJ" secondAttribute="centerX" id="AK6-19-ZUy"/>
+                                        <constraint firstItem="5ZM-kK-f7C" firstAttribute="top" secondItem="v14-Yi-KjU" secondAttribute="top" constant="170" id="UGB-nx-AOA"/>
+                                        <constraint firstItem="iob-cU-15p" firstAttribute="centerX" secondItem="O4g-GB-x8j" secondAttribute="centerX" id="YBN-xa-JQf"/>
+                                        <constraint firstItem="iob-cU-15p" firstAttribute="centerX" secondItem="v14-Yi-KjU" secondAttribute="centerX" id="izk-Wx-VGP"/>
+                                        <constraint firstItem="4gV-Oo-ieJ" firstAttribute="leading" secondItem="iob-cU-15p" secondAttribute="leading" id="j7V-Wq-1o2"/>
+                                        <constraint firstItem="iob-cU-15p" firstAttribute="top" secondItem="O4g-GB-x8j" secondAttribute="bottom" constant="46" id="jwL-yf-tgA"/>
+                                        <constraint firstItem="O4g-GB-x8j" firstAttribute="top" secondItem="5ZM-kK-f7C" secondAttribute="bottom" constant="29" id="xIT-Tt-W1c"/>
+                                    </constraints>
+                                </view>
+                                <blurEffect style="light"/>
+                            </visualEffectView>
+                        </subviews>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="g2k-J1-ZnN" firstAttribute="leading" secondItem="3WC-md-Y2t" secondAttribute="leading" id="LaF-DN-qkJ"/>
+                            <constraint firstItem="g2k-J1-ZnN" firstAttribute="bottom" secondItem="tkS-Zb-ce8" secondAttribute="top" id="aIV-yP-MAK"/>
+                            <constraint firstItem="g2k-J1-ZnN" firstAttribute="top" secondItem="3WC-md-Y2t" secondAttribute="top" id="amS-LG-UGL"/>
+                            <constraint firstAttribute="trailing" secondItem="g2k-J1-ZnN" secondAttribute="trailing" id="rfp-Lq-zQy"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="UIm-1w-7EQ"/>
+                    <nil key="simulatedTopBarMetrics"/>
+                    <connections>
+                        <outlet property="mv" destination="iob-cU-15p" id="eXF-Iw-FKq"/>
+                        <outlet property="song" destination="5ZM-kK-f7C" id="RGz-Qw-qte"/>
+                        <outlet property="timeline" destination="O4g-GB-x8j" id="sob-c8-diU"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="q2O-JA-Gmo" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3710" y="-89"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="9mB-zI-EWv">
+            <objects>
+                <viewController id="MrU-AQ-Rod" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="MM8-Ex-vC8"/>
+                        <viewControllerLayoutGuide type="bottom" id="zai-Xf-yPQ"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="yUX-LY-Eeh">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
-                    <navigationItem key="navigationItem" id="UIm-1w-7EQ"/>
+                    <navigationItem key="navigationItem" id="U8F-Fe-DiV"/>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="q2O-JA-Gmo" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ENq-bp-8cs" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3050" y="417"/>
+            <point key="canvasLocation" x="3876" y="636"/>
         </scene>
         <!--专辑试听-->
         <scene sceneID="R3b-nb-gSF">
@@ -129,25 +208,76 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="f7d-0E-8TA" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4360" y="300"/>
+            <point key="canvasLocation" x="4373" y="-282"/>
+        </scene>
+        <!--关于崔健-->
+        <scene sceneID="sSe-Qa-XUq">
+            <objects>
+                <viewController id="cuh-sm-gdg" customClass="TimeLineViewController" customModule="CuiJian" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="YV3-YC-fMr"/>
+                        <viewControllerLayoutGuide type="bottom" id="Y9q-As-r0U"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="pxS-TV-KVE">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="songBgImage" translatesAutoresizingMaskIntoConstraints="NO" id="Glp-Jn-rHd">
+                                <rect key="frame" x="-20" y="-10" width="640" height="620"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="songBgParaImage" translatesAutoresizingMaskIntoConstraints="NO" id="8uD-LC-d7m">
+                                <rect key="frame" x="-20" y="0.0" width="640" height="600"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="Glp-Jn-rHd" firstAttribute="trailing" secondItem="8uD-LC-d7m" secondAttribute="trailing" id="5pe-5t-shM"/>
+                            <constraint firstItem="8uD-LC-d7m" firstAttribute="centerX" secondItem="pxS-TV-KVE" secondAttribute="centerX" id="6ph-77-cYz"/>
+                            <constraint firstItem="Glp-Jn-rHd" firstAttribute="leading" secondItem="8uD-LC-d7m" secondAttribute="leading" id="OFf-tC-Oms"/>
+                            <constraint firstItem="Glp-Jn-rHd" firstAttribute="top" secondItem="pxS-TV-KVE" secondAttribute="topMargin" constant="-10" id="bpT-2t-VP4"/>
+                            <constraint firstItem="8uD-LC-d7m" firstAttribute="centerY" secondItem="Glp-Jn-rHd" secondAttribute="centerY" id="inz-BO-8tR"/>
+                            <constraint firstItem="Glp-Jn-rHd" firstAttribute="leading" secondItem="pxS-TV-KVE" secondAttribute="leadingMargin" constant="-40" id="oFx-zf-wle"/>
+                            <constraint firstItem="8uD-LC-d7m" firstAttribute="top" secondItem="pxS-TV-KVE" secondAttribute="top" id="vUo-Fa-hoa"/>
+                            <constraint firstItem="8uD-LC-d7m" firstAttribute="bottom" secondItem="Y9q-As-r0U" secondAttribute="top" id="y2Y-GW-K38"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="关于崔健" id="Onp-n9-j2X">
+                        <barButtonItem key="leftBarButtonItem" image="backArrow" id="O07-pG-38Z">
+                            <connections>
+                                <action selector="dismissVC:" destination="cuh-sm-gdg" id="0kB-7G-wfL"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" image="hamburger" id="iqY-ao-d9u"/>
+                    </navigationItem>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                    <connections>
+                        <outlet property="bgImageView" destination="8uD-LC-d7m" id="X2V-LE-t1o"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="FfH-G8-Ia3" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4456" y="380"/>
         </scene>
         <!--Navigation Controller-->
-        <scene sceneID="TJl-tv-WP3">
+        <scene sceneID="Xps-mj-ShA">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="mtR-Sj-aN5" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" modalTransitionStyle="crossDissolve" id="Ohr-QL-pgw" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="2ug-fk-e1a">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="TIT-Iz-M0c" customClass="TransparentNavBar" customModule="CuiJian" customModuleProvider="target">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <textAttributes key="titleTextAttributes">
+                            <color key="textColor" red="0.53333333333333333" green="0.51372549019607838" blue="0.42745098039215684" alpha="1" colorSpace="calibratedRGB"/>
+                        </textAttributes>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="GFv-yb-n9U" kind="relationship" relationship="rootViewController" id="76f-gr-18o"/>
+                        <segue destination="GFv-yb-n9U" kind="relationship" relationship="rootViewController" id="niM-JL-NVB"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="xVu-at-n1g" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="y98-m1-pWv" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2959" y="-284"/>
+            <point key="canvasLocation" x="2966" y="-89"/>
         </scene>
     </scenes>
     <resources>
@@ -156,7 +286,4 @@
         <image name="songBgImage" width="750" height="1334"/>
         <image name="songBgParaImage" width="958" height="1618"/>
     </resources>
-    <inferredMetricsTieBreakers>
-        <segue reference="x8e-3F-m38"/>
-    </inferredMetricsTieBreakers>
 </document>
