--- a/CuiJian/Base.lproj/Main.storyboard
+++ b/CuiJian/Base.lproj/Main.storyboard
@@ -81,14 +81,14 @@
                                             <rect key="frame" x="271" y="229" width="58" height="30"/>
                                             <state key="normal" title="Timeline"/>
                                             <connections>
-                                                <segue destination="cuh-sm-gdg" kind="push" id="qWr-6P-Maa"/>
+                                                <segue destination="cuh-sm-gdg" kind="show" id="qWr-6P-Maa"/>
                                             </connections>
                                         </button>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iob-cU-15p">
                                             <rect key="frame" x="285" y="305" width="30" height="30"/>
                                             <state key="normal" title="MV"/>
                                             <connections>
-                                                <segue destination="MrU-AQ-Rod" kind="push" id="OyN-cg-LNa"/>
+                                                <segue destination="MrU-AQ-Rod" kind="show" id="OyN-cg-LNa"/>
                                             </connections>
                                         </button>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4gV-Oo-ieJ">
@@ -102,7 +102,7 @@
                                             <rect key="frame" x="284" y="170" width="36" height="30"/>
                                             <state key="normal" title="Song"/>
                                             <connections>
-                                                <segue destination="vQp-Ch-gUU" kind="push" id="8SK-Qx-k3t"/>
+                                                <segue destination="vQp-Ch-gUU" kind="show" id="8SK-Qx-k3t"/>
                                             </connections>
                                         </button>
                                     </subviews>
@@ -157,7 +157,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ENq-bp-8cs" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3876" y="636"/>
+            <point key="canvasLocation" x="3822" y="678"/>
         </scene>
         <!--专辑试听-->
         <scene sceneID="R3b-nb-gSF">
@@ -196,9 +196,6 @@
                             <connections>
                                 <action selector="backBtn:" destination="vQp-Ch-gUU" id="Xsf-9E-O16"/>
                             </connections>
-                        </barButtonItem>
-                        <barButtonItem key="rightBarButtonItem" image="hamburger" id="8cb-Yi-teJ">
-                            <color key="tintColor" red="0.53333333333333333" green="0.51372549019607838" blue="0.42745098039215684" alpha="1" colorSpace="calibratedRGB"/>
                         </barButtonItem>
                     </navigationItem>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
@@ -247,7 +244,6 @@
                                 <action selector="dismissVC:" destination="cuh-sm-gdg" id="0kB-7G-wfL"/>
                             </connections>
                         </barButtonItem>
-                        <barButtonItem key="rightBarButtonItem" image="hamburger" id="iqY-ao-d9u"/>
                     </navigationItem>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
